Found CargoBay in MHS hallway

--- a/raspi/.recommenders/caches/identified-project-coordinates.json
+++ b/raspi/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_181","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"R:\\home\\pi\\2019_VisionSystem\\raspi\\camsvr\\lib\\opencv.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_191","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\acappon\\Documents\\2019_VisionSystem\\raspi\\camsvr\\lib\\opencv.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"C:\\Users\\acappon\\Documents\\2019_VisionSystem\\raspi\\camsvr","type":"PROJECT","hints":{"PROJECT_NAME":"camsvr"}},"ABSENT"]]
